--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "lint": "eslint --fix .",
+    "format": "prettier -w -u .",
+    "lint:fix": "eslint --ext .js,.ts,.vue --ignore-path .eslintignore --fix .",
     "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
@@ -19,14 +20,24 @@
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.11.4",
     "@iconify-json/carbon": "^1.1.31",
+    "@typescript-eslint/eslint-plugin": "^7.5.0",
+    "@typescript-eslint/parser": "^7.5.0",
     "@unocss/eslint-config": "^0.58.7",
     "@unocss/nuxt": "^0.58.7",
+    "@vue/eslint-config-standard": "^8.0.1",
     "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-format": "^0.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-vue": "^9.24.1",
     "sass": "^1.72.0",
     "typescript": "^5.4.3",
     "vue-tsc": "^1"
+  },
+  "eslintConfig": {
+    "extends": [
+      "@unocss"
+    ]
   }
 }
